# open-research-pipeline

./: .gitignore  README.md  RESEARCH_PIPELINE.md  demo_experiment.yaml  example_experiment.yaml  pyproject.toml  train.py
.github/ISSUE_TEMPLATE/: experiment.yml
.github/workflows/: aggregate-sweep.yml
docs/: github-issues-workflow.md
src/open_research_pipeline/: __init__.py
src/open_research_pipeline/cli/: __init__.py
src/open_research_pipeline/core/: github_client.py  runner.py
tests/: __init__.py  test_core.py  test_runner_deliverables.py  test_sweep_helpers.py
