[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-research-pipeline"
version = "0.1.0"
description = "Open Research Pipeline - Automated experiment management and analysis system"
authors = [
    {name = "nomadicsynth", email = "nomadicsynth@neoncortex.com.au"}
]
dependencies = [
    "click",
    "pyyaml",
    "rich",
    "pydantic",
    "wandb",
    "python-dotenv"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
orp = "open_research_pipeline.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy"
]
docs = [
    "mkdocs",
    "mkdocs-material"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"